--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <div class="container">
     <ul class="navbar-nav">
@@ -33,6 +34,44 @@
 
 
 </nav>
+<!-- island snow L -->
+<div class = "row">
+  <div class ="col">
+    <img src="experience-islandsnow-bootstrap-logo.png" alt="Island Snow Logo" class = ”img-fluid rounded mx-auto d-block py-1” />
+  </div>
+<!-- second menu -->
+  <div class = row justify-content-center pt-4>
+    <div class="col-1">
+      <div class = "dropdown">
+        <div class = "dropdown-toggle"> <strong> MEN</strong></div>
+      </div>
+    </div>
+    <div class="col-1">
+      <div class = "dropdown">
+        <div class = "dropdown-toggle"> <strong> WOMEN</strong></div>
+      </div>
+    </div>
+    <div class="col-1">
+      <div class = "dropdown">
+        <div class = "dropdown-toggle"> <strong> KIDS</strong></div>
+      </div>
+    </div>
+    <div class="col-1">
+      <div class = "dropdown">
+        <div class = "dropdown-toggle"> <strong> BRANDS</strong></div>
+      </div>
+    </div>
+    <div class="col-1">
 
+        <strong> MEN</strong>
+
+    </div>
+  </div>
+</div>
+
+   <div class=" row-justify-content-center" >
+
+     <img src="experience-islandsnow-bootstrap-main.png"  class = "img-fluid"/>
+   </div>
 </body>
 </html>
