--- a/index.html
+++ b/index.html
@@ -73,5 +73,33 @@
 
      <img src="experience-islandsnow-bootstrap-main.png"  class = "img-fluid"/>
    </div>
+<footer>
+  <div class = "container">
+    <div class = "row p-3">
+      <div class="col">
+        Navigation
+        <hr />
+        <div>About us</div>
+        <div>Employment</div>
+        <div>Videos</div>
+      </div>
+      <div class="col">
+        Main Menu
+        <hr />
+        <div>Men</div>
+        <div>Women </div>
+        <div>Kids</div>
+      </div>
+      <div class="col">
+        CONNECT
+        <hr />
+        <div>Sign ip for latest news</div>
+        <input type="text" placeholder="Enter Email Address"/>
+        <div class="btn btn-dark"> Join</div>
+        <div>Videos</div>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
